diesel_compile_tests/tests/fail/expressions_can_only_be_compared_for_equality_to_expressions_of_same_type.stderr
error[E0277]: the trait bound `&str: AsExpression<diesel::sql_types::Integer>` is not satisfied
  --> tests/fail/expressions_can_only_be_compared_for_equality_to_expressions_of_same_type.rs:15:19
   |
LL |     let pred = id.eq("string");
   |                   ^^ the trait `AsExpression<diesel::sql_types::Integer>` is not implemented for `&str`
   |
   = help: `&str` implements trait `AsExpression<T>`:
             AsExpression<Citext>
             AsExpression<diesel::sql_types::Bpchar>
             AsExpression<diesel::sql_types::Date>
             AsExpression<diesel::sql_types::Text>
             AsExpression<diesel::sql_types::Time>
             AsExpression<diesel::sql_types::Timestamp>

error[E0277]: the trait bound `columns::name: AsExpression<diesel::sql_types::Integer>` is not satisfied
  --> tests/fail/expressions_can_only_be_compared_for_equality_to_expressions_of_same_type.rs:17:19
   |
LL |     let pred = id.eq(name);
   |                   ^^ unsatisfied trait bound
   |
help: the trait `AsExpression<diesel::sql_types::Integer>` is not implemented for `columns::name`
  --> tests/fail/expressions_can_only_be_compared_for_equality_to_expressions_of_same_type.rs:8:9
   |
 LL |         name -> VarChar,
   |         ^^^^
   = help: the following other types implement trait `AsExpression<T>`:
             &'__expr i32
             Arc<i32>
             Box<i32>
             Rc<i32>
             i32
   = note: this error originates in the macro `table` (in Nightly builds, run with -Z macro-backtrace for more info)
For more information about this error, try `rustc --explain E0277`.
